syntax = "proto3";
package xpla.specialvalidator.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/xpladev/xpla/x/specialvalidator/types";

// Query defines the gRPC querier service for specialvalidator module.
service Query {
    rpc Specialvalidators(QuerySpecialValidatorsRequest) returns (QuerySpecialValidatorsResponse) {
      option (google.api.http).get = "/xpla/specialvalidator/v1beta1/specialvalidators";
    }
}

message QuerySpecialValidatorsRequest {}

message QuerySpecialValidatorsResponse {
  repeated string special_validators = 1;
}