syntax = "proto3";
package xpla.specialvalidator.v1beta1;

option go_package = "github.com/xpladev/xpla/x/specialvalidator/types";

import "gogoproto/gogo.proto";

// SpecialValidator required for validator set update logic.
message SpecialValidator {
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;
  
    // address is the address of the validator.
    string address = 1;

    // power defines the power of the validator.
    int64 power = 2;

    bool is_deleting = 3;
}